# Car-Price-Prediction

./: .gitignore  README.md  app.py  pyproject.toml
data/processed/: X_train.csv  y_train.csv
models/: model.joblib  study.pkl
