[tool.poetry]
name = "cars"
version = "0.1.0"
description = "car price forecaster"
authors = ["João Vitor <joaovitorsouza205@hotmail.com>"]

[tool.poetry.dependencies]
python = "3.10.2"
streamlit = "^1.7.0"
pandas = "^1.3.4"
numpy = "^1.22.3"
optuna = "^2.10.0"
joblib = "^1.0.1"
scikit-learn = "^1.0.2"
plotly = "^5.6.0"
xgboost = "1.5.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
